Did some subtract 1 functions and got final dataset

--- a/r3_final_project.Rmd
+++ b/r3_final_project.Rmd
@@ -58,103 +58,159 @@ d2_raw <- d2 %>%
 ```
 
 ```{r tsc}
-#group 1
+#NEW VERSION - find means of each item of tsc
 
-tsc1_long <- d1_raw %>% 
-  select(1:7, 72:111) %>% 
-  mutate(q372_1 = (q372_1 - 1),
-         q372_2 = (q372_2 - 1),
-         q372_3 = (q372_3 - 1),
-         q372_4 = (q372_4 - 1),
-         q372_5 = (q372_5 - 1),
-         q372_6 = (q372_6 - 1),
-         q372_7 = (q372_7 - 1),
-         q372_8 = (q372_8 - 1),
-         q372_9 = (q372_9 - 1),
-         q372_10 = (q372_10 - 1),
-         q372_11 = (q372_11 - 1),
-         q372_12 = (q372_12 - 1),
-         q372_13 = (q372_13 - 1),
-         q372_14 = (q372_14 - 1),
-         q372_15 = (q372_15 - 1),
-         q372_16 = (q372_16 - 1),
-         q372_17 = (q372_17 - 1),
-         q372_18 = (q372_18 - 1),
-         q372_19 = (q372_19 - 1),
-         q372_20 = (q372_20 - 1),
-         q372_21 = (q372_21 - 1),
-         q372_22 = (q372_22 - 1),
-         q372_23 = (q372_23 - 1),
-         q372_24 = (q372_24 - 1),
-         q372_25 = (q372_25 - 1),
-         q372_26 = (q372_26 - 1),
-         q372_27 = (q372_27 - 1),
-         q372_28 = (q372_28 - 1),
-         q372_29 = (q372_29 - 1),
-         q372_30 = (q372_30 - 1),
-         q372_31 = (q372_31 - 1),
-         q372_32 = (q372_32 - 1),
-         q372_33 = (q372_33 - 1),
-         q372_34 = (q372_34 - 1),
-         q372_35 = (q372_35 - 1),
-         q372_36 = (q372_36 - 1),
-         q372_37 = (q372_37 - 1),
-         q372_38 = (q372_38 - 1),
-         q372_39 = (q372_39 - 1),
-         q372_40 = (q372_40 - 1)) %>% 
-  gather(item, response, -1:-7) %>% 
+#write function to get demographic information
+get_demo_info <- function(df) {
+  select(df, 1:7)
+}
+
+#write function to select tsc items
+get_tsc_items <- function(df) {
+  select(df, 72:111)
+}
+
+#subtract 1 function
+subtract1 <- function(df) {
+  map(df, ~(.x-1), na.rm = TRUE)
+}
+
+
+#GROUP 1
+demo1 <- d1_raw %>% 
+  get_demo_info
+
+tsc1 <- d1_raw %>% 
+  get_tsc_items
+
+#subtract 1 from all the tsc columns
+tsc1 <- subtract1(tsc1)
+
+#merge it back into the dataframe with demographics
+tsc1_long <- cbind(demo1, tsc1)
+
+tsc1_long <- tsc1_long %>% 
+gather(item, response, -1:-7) %>% 
   separate(item, c(NA, "item"), sep = "_") %>% 
   mutate(scale = "tsc") %>% 
   select(1:7, 10, 8:9)
+
+#GROUP 2
+demo2 <- d2_raw %>% 
+  get_demo_info
+
+tsc2 <- d2_raw %>% 
+  get_tsc_items
+
+#subtract 1 from all the tsc columns
+tsc2 <- subtract1(tsc2)
+
+#merge it back into the dataframe with demographics
+tsc2_long <- cbind(demo2, tsc2)
+
+tsc2_long <- tsc2_long %>% 
+gather(item, response, -1:-7) %>% 
+  separate(item, c(NA, "item"), sep = "_") %>% 
+  mutate(scale = "tsc") %>% 
+  select(1:7, 10, 8:9)
+
+
+#ORIGINAL VERSION:
+#tsc1_long <- d1_raw %>% 
+  #select(1:7, 72:111) %>% 
+  # mutate(q372_1 = (q372_1 - 1),
+  #        q372_2 = (q372_2 - 1),
+  #        q372_3 = (q372_3 - 1),
+  #        q372_4 = (q372_4 - 1),
+  #        q372_5 = (q372_5 - 1),
+  #        q372_6 = (q372_6 - 1),
+  #        q372_7 = (q372_7 - 1),
+  #        q372_8 = (q372_8 - 1),
+  #        q372_9 = (q372_9 - 1),
+  #        q372_10 = (q372_10 - 1),
+  #        q372_11 = (q372_11 - 1),
+  #        q372_12 = (q372_12 - 1),
+  #        q372_13 = (q372_13 - 1),
+  #        q372_14 = (q372_14 - 1),
+  #        q372_15 = (q372_15 - 1),
+  #        q372_16 = (q372_16 - 1),
+  #        q372_17 = (q372_17 - 1),
+  #        q372_18 = (q372_18 - 1),
+  #        q372_19 = (q372_19 - 1),
+  #        q372_20 = (q372_20 - 1),
+  #        q372_21 = (q372_21 - 1),
+  #        q372_22 = (q372_22 - 1),
+  #        q372_23 = (q372_23 - 1),
+  #        q372_24 = (q372_24 - 1),
+  #        q372_25 = (q372_25 - 1),
+  #        q372_26 = (q372_26 - 1),
+  #        q372_27 = (q372_27 - 1),
+  #        q372_28 = (q372_28 - 1),
+  #        q372_29 = (q372_29 - 1),
+  #        q372_30 = (q372_30 - 1),
+  #        q372_31 = (q372_31 - 1),
+  #        q372_32 = (q372_32 - 1),
+  #        q372_33 = (q372_33 - 1),
+  #        q372_34 = (q372_34 - 1),
+  #        q372_35 = (q372_35 - 1),
+  #        q372_36 = (q372_36 - 1),
+  #        q372_37 = (q372_37 - 1),
+  #        q372_38 = (q372_38 - 1),
+  #        q372_39 = (q372_39 - 1),
+  #        q372_40 = (q372_40 - 1)) %>% 
+  # gather(item, response, -1:-7) %>% 
+  # separate(item, c(NA, "item"), sep = "_") %>% 
+  # mutate(scale = "tsc") %>% 
+  # select(1:7, 10, 8:9)
 
 #group 2
-
-tsc2_long <- d2_raw %>% 
-  select(1:7, 72:111) %>% 
-  mutate(q75_1 = (q75_1 - 1),
-         q75_2 = (q75_2 - 1),
-         q75_3 = (q75_3 - 1),
-         q75_4 = (q75_4 - 1),
-         q75_5 = (q75_5 - 1),
-         q75_6 = (q75_6 - 1),
-         q75_7 = (q75_7 - 1),
-         q75_8 = (q75_8 - 1),
-         q75_9 = (q75_9 - 1),
-         q75_10 = (q75_10 - 1),
-         q75_11 = (q75_11 - 1),
-         q75_12 = (q75_12 - 1),
-         q75_13 = (q75_13 - 1),
-         q75_14 = (q75_14 - 1),
-         q75_15 = (q75_15 - 1),
-         q75_16 = (q75_16 - 1),
-         q75_17 = (q75_17 - 1),
-         q75_18 = (q75_18 - 1),
-         q75_19 = (q75_19 - 1),
-         q75_20 = (q75_20 - 1),
-         q75_21 = (q75_21 - 1),
-         q75_22 = (q75_22 - 1),
-         q75_23 = (q75_23 - 1),
-         q75_24 = (q75_24 - 1),
-         q75_25 = (q75_25 - 1),
-         q75_26 = (q75_26 - 1),
-         q75_27 = (q75_27 - 1),
-         q75_28 = (q75_28 - 1),
-         q75_29 = (q75_29 - 1),
-         q75_30 = (q75_30 - 1),
-         q75_31 = (q75_31 - 1),
-         q75_32 = (q75_32 - 1),
-         q75_33 = (q75_33 - 1),
-         q75_34 = (q75_34 - 1),
-         q75_35 = (q75_35 - 1),
-         q75_36 = (q75_36 - 1),
-         q75_37 = (q75_37 - 1),
-         q75_38 = (q75_38 - 1),
-         q75_39 = (q75_39 - 1),
-         q75_40 = (q75_40 - 1)) %>% 
-  gather(item, response, -1:-7) %>% 
-  separate(item, c(NA, "item"), sep = "_") %>% 
-  mutate(scale = "tsc") %>% 
-  select(1:7, 10, 8:9)
+  
+# tsc2_long <- d2_raw %>% 
+#   select(1:7, 72:111) %>% 
+#   mutate(q75_1 = (q75_1 - 1),
+#          q75_2 = (q75_2 - 1),
+#          q75_3 = (q75_3 - 1),
+#          q75_4 = (q75_4 - 1),
+#          q75_5 = (q75_5 - 1),
+#          q75_6 = (q75_6 - 1),
+#          q75_7 = (q75_7 - 1),
+#          q75_8 = (q75_8 - 1),
+#          q75_9 = (q75_9 - 1),
+#          q75_10 = (q75_10 - 1),
+#          q75_11 = (q75_11 - 1),
+#          q75_12 = (q75_12 - 1),
+#          q75_13 = (q75_13 - 1),
+#          q75_14 = (q75_14 - 1),
+#          q75_15 = (q75_15 - 1),
+#          q75_16 = (q75_16 - 1),
+#          q75_17 = (q75_17 - 1),
+#          q75_18 = (q75_18 - 1),
+#          q75_19 = (q75_19 - 1),
+#          q75_20 = (q75_20 - 1),
+#          q75_21 = (q75_21 - 1),
+#          q75_22 = (q75_22 - 1),
+#          q75_23 = (q75_23 - 1),
+#          q75_24 = (q75_24 - 1),
+#          q75_25 = (q75_25 - 1),
+#          q75_26 = (q75_26 - 1),
+#          q75_27 = (q75_27 - 1),
+#          q75_28 = (q75_28 - 1),
+#          q75_29 = (q75_29 - 1),
+#          q75_30 = (q75_30 - 1),
+#          q75_31 = (q75_31 - 1),
+#          q75_32 = (q75_32 - 1),
+#          q75_33 = (q75_33 - 1),
+#          q75_34 = (q75_34 - 1),
+#          q75_35 = (q75_35 - 1),
+#          q75_36 = (q75_36 - 1),
+#          q75_37 = (q75_37 - 1),
+#          q75_38 = (q75_38 - 1),
+#          q75_39 = (q75_39 - 1),
+#          q75_40 = (q75_40 - 1)) %>% 
+#   gather(item, response, -1:-7) %>% 
+#   separate(item, c(NA, "item"), sep = "_") %>% 
+#   mutate(scale = "tsc") %>% 
+#   select(1:7, 10, 8:9)
 
 tsc_long <- bind_rows(tsc1_long, tsc2_long)
 #write_csv(tsc_long, path = "/Users/monikalind/Documents/UO/sap/tsc_long.csv")
